--- a/package.json
+++ b/package.json
@@ -1,23 +1,42 @@
 {
   "name": "alsl-sandbox2",
-  "version": "0.1.0",
+  "version": "0.0.0-development",
   "private": true,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mshogren/alsl-sandbox2.git"
+  },
   "dependencies": {
+    "@commitlint/cli": "^8.3.5",
+    "@commitlint/config-conventional": "^8.3.4",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "codecov": "^3.6.5",
+    "commitizen": "^4.1.2",
+    "cz-conventional-changelog": "^3.2.0",
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-config-prettier": "^6.11.0",
+    "husky": "^4.2.5",
+    "lint-staged": "^10.2.2",
+    "prettier": "^2.0.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "semantic-release": "^17.0.7",
+    "source-map-explorer": "^2.4.2"
   },
   "scripts": {
+    "analyze": "source-map-explorer 'build/static/js/*.js'",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "semantic-release": "semantic-release",
+    "update": "rm -rf node_modules && rm package-lock.json && ncu -u && npm install"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": "./.eslintrc.js"
   },
   "browserslist": {
     "production": [
@@ -30,5 +49,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
   }
 }
