--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -65,6 +65,9 @@ jobs:
         with:
           node-version: 12.x
 
+      - name: Install dependencies
+        run: npm ci
+
       - name: Create release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
