--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -79,6 +79,9 @@ jobs:
       - name: Build
         run: npm run build
 
+      - name: Install functions dependencies
+        run: npm --prefix ./functions ci ./functions
+
       - name: Deploy to Firebase
         uses: w9jds/firebase-action@master
         with:
