--- a/package.json
+++ b/package.json
@@ -13,17 +13,23 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "bootstrap": "^4.5.0",
     "codecov": "^3.6.5",
     "commitizen": "^4.1.2",
     "cz-conventional-changelog": "^3.2.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-config-prettier": "^6.11.0",
+    "firebase": "^7.14.3",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.2",
     "prettier": "^2.0.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-firebaseui": "^4.1.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "reactfire": "^2.0.3",
+    "reactstrap": "^8.4.1",
     "semantic-release": "^17.0.7",
     "source-map-explorer": "^2.4.2"
   },
