--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@ungap/global-this": "^0.4.0",
     "bootstrap": "^4.5.0",
     "codecov": "^3.6.5",
     "commitizen": "^4.1.2",
